# robotnik_webots

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  package.xml
config/: dummy.yaml
launch/: spawn_robot.launch.py  spawn_world.launch.py
protos/: rbkairos.proto  rbrobout.proto  rbwatcher.proto
protos/UR/: ur5e.proto
resource/rbkairos/: controller.urdf  ros2control.yml  rviz_config.rviz
resource/rbkairos/meshes/: rbkairos_wheel.stl
resource/rbrobout/: controller.urdf  ros2control.yml  rviz_config.rviz
resource/rbwatcher/: controller.urdf  ros2control.yml  rviz_config.rviz
scripts/: multiple.sh
worlds/: demo.wbt  empty.wbt
