<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotnik_webots</name>
  <version>0.1.0</version>
  <description>ROS 2 package for integrating Robotnik robots with the Webots simulator, providing drivers and interfaces for simulation and control.</description>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <license>Apache-2.0</license>

  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>rqt_joint_trajectory_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
